--- a/templates/index.html
+++ b/templates/index.html
@@ -42,54 +42,56 @@
   {{ geojson|json_script:"places-geojson" }}
 
   <script id="app-template" type="text/template">
-    <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
-      <div v-if="promptVisible" class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-        <img class="d-block select-place-prompt mb-4" src="{% static 'images/hand-pointer-regular.svg' %}" alt="Select place">
-        <h4>Выберите место на карте</h4>
-      </div>
-
-      <div class="align-items-center justify-content-center d-flex" v-if="loading" style="height: 100%;">
-        <div class="spinner-grow text-light" style="width: 3rem; height: 3rem;" role="status">
-          <span class="sr-only">Loading...</span>
+    {% verbatim %}
+      <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
+        <div v-if="promptVisible" class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
+          <img class="d-block select-place-prompt mb-4" src="static/images/hand-pointer-regular.svg" alt="Select place">
+          <h4>Выберите место на карте</h4>
         </div>
-      </div>
 
-      <div class="place-description" v-if="selectedPlace">
+        <div class="align-items-center justify-content-center d-flex" v-if="loading" style="height: 100%;">
+          <div class="spinner-grow text-light" style="width: 3rem; height: 3rem;" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
 
-        <img v-if="mainPhotoSrc" v-bind:src="mainPhotoSrc" class="d-block shadow mb-3 rounded" v-bind:alt="selectedPlace.title">
+        <div class="place-description" v-if="selectedPlace">
 
-        <h5 class="mb-3">{{ selectedPlace.title }}</h5>
+          <img v-if="mainPhotoSrc" v-bind:src="mainPhotoSrc" class="d-block shadow mb-3 rounded" v-bind:alt="selectedPlace.title">
 
-        <p>{{ selectedPlace.short_description }}</p>
+          <h5 class="mb-3">{{ selectedPlace.title }}</h5>
 
-        <div id="place-photos" class="carousel slide mb-3 shadow" data-ride="carousel" data-interval="5000">
-          <ol class="carousel-indicators">
-            <template v-for="(img, index) in carouselImgs" :key="img">
-              <li v-on:click="handlePhotosClick(index)" v-bind:class="{active: index==0}"></li>
-            </template>
-          </ol>
-          <div class="carousel-inner">
-            <template v-for="(img, index) in carouselImgs" :key="img">
-              <div v-bind:class="{'carousel-item bg-light': 1, active: index==0}">
-                <img v-bind:src="img" class="d-block w-100" v-bind:alt="selectedPlace.title">
-              </div>
+          <p>{{ selectedPlace.short_description }}</p>
+
+          <div id="place-photos" class="carousel slide mb-3 shadow" data-ride="carousel" data-interval="5000">
+            <ol class="carousel-indicators">
+              <template v-for="(img, index) in carouselImgs" :key="img">
+                <li v-on:click="handlePhotosClick(index)" v-bind:class="{active: index==0}"></li>
+              </template>
+            </ol>
+            <div class="carousel-inner">
+              <template v-for="(img, index) in carouselImgs" :key="img">
+                <div v-bind:class="{'carousel-item bg-light': 1, active: index==0}">
+                  <img v-bind:src="img" class="d-block w-100" v-bind:alt="selectedPlace.title">
+                </div>
+              </template>
+            </div>
+            <template v-if="carouselImgs.length">
+              <a class="carousel-control-prev" v-on:click="handlePhotosClick('prev')" role="button">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" v-on:click="handlePhotosClick('next')" role="button">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </template>
           </div>
-          <template v-if="carouselImgs.length">
-            <a class="carousel-control-prev" v-on:click="handlePhotosClick('prev')" role="button">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" v-on:click="handlePhotosClick('next')" role="button">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </template>
-        </div>
 
-        <div v-html="selectedPlace.long_description"></div>
+          <div v-html="selectedPlace.long_description"></div>
+        </div>
       </div>
-    </div>
+    {% endverbatim %}
   </script>
 
 </head>
